Push full project to main

--- a/DrivingCertificateApp/DrivingCertificateApp.csproj
+++ b/DrivingCertificateApp/DrivingCertificateApp.csproj
@@ -9,6 +9,28 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Image\car2.jpg" />
+    <None Remove="Image\car3.jpg" />
+    <None Remove="Image\car4.jpg" />
+    <None Remove="Image\images.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Image\car2.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Image\car3.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Image\car4.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Image\images.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.3">
       <PrivateAssets>all</PrivateAssets>
@@ -16,6 +38,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.1" />
+    <PackageReference Include="websocketsharp.core" Version="1.0.1" />
   </ItemGroup>
 
   <ItemGroup>
